--- a/JavaScriptRefresher/index.html
+++ b/JavaScriptRefresher/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>30DaysOfJavaScript:External script</title>
-    <script src="introduction.js"></script>
+    <title>Multiple External Scripts</title>
   </head>
-  <body></body>
+  <body>
+    <!-- <script src="./helloworld.js"></script>
+    <script src="./introduction.js"></script> -->
+    <!-- <script src="./training.js"></script> -->
+    <script src="./functions.js"></script>
+  </body>
 </html>
